--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -1838,6 +1838,128 @@
     "\n",
     "    return pd.DataFrame(results)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "933aeb4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DOI V2 (scaled t fit)  — minimal changes, keep your structure\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.optimize import curve_fit\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "def sigmoid(t, L, k, t0, b):\n",
+    "    # baseline sigmoid\n",
+    "    return b + L / (1.0 + np.exp(-k * (t - t0)))\n",
+    "\n",
+    "def first_sigmoid_to_account_refined(\n",
+    "    df,\n",
+    "    id_col=\"account_id\",\n",
+    "    order_col=\"rolling_order\",\n",
+    "    y_col=\"b_r4w_ms\",\n",
+    "    min_points=10,\n",
+    "    near_zero_cut=0.01,\n",
+    "    r2_cut=0.85,\n",
+    "    sustain_window=3,\n",
+    "    maxfev=20000,\n",
+    "):\n",
+    "    d = df[[id_col, order_col, y_col]].copy()\n",
+    "    d = d.dropna(subset=[id_col, order_col, y_col])\n",
+    "    d[order_col] = pd.to_numeric(d[order_col], errors=\"coerce\")\n",
+    "    d[y_col] = pd.to_numeric(d[y_col], errors=\"coerce\")\n",
+    "    d = d.dropna(subset=[order_col, y_col])\n",
+    "\n",
+    "    # share clamp\n",
+    "    d[y_col] = d[y_col].clip(0, 1)\n",
+    "\n",
+    "    results = []\n",
+    "\n",
+    "    for acc, g in d.groupby(id_col, sort=False):\n",
+    "        g = g.sort_values(order_col)\n",
+    "        y = g[y_col].to_numpy(dtype=float)\n",
+    "\n",
+    "        if len(y) < min_points:\n",
+    "            continue\n",
+    "        if np.all(y < near_zero_cut):\n",
+    "            continue\n",
+    "        if np.nanstd(y) < 1e-6:\n",
+    "            continue\n",
+    "\n",
+    "        # --- NEW: scale t for numeric stability / speed ---\n",
+    "        t_raw = g[order_col].to_numpy(dtype=float)\n",
+    "        t_mean = float(np.mean(t_raw))\n",
+    "        t_std = float(np.std(t_raw))\n",
+    "        if t_std == 0.0:\n",
+    "            continue\n",
+    "        t = (t_raw - t_mean) / t_std  # scaled t\n",
+    "\n",
+    "        # Initial guesses (in scaled space)\n",
+    "        y_min, y_max = float(np.min(y)), float(np.max(y))\n",
+    "        L0 = max(y_max - y_min, 1e-3)\n",
+    "        b0 = y_min\n",
+    "        k0 = 1.0\n",
+    "        t0_0 = float(np.median(t))\n",
+    "\n",
+    "        # bounds now apply in scaled space (t0 within scaled min/max)\n",
+    "        t_min, t_max = float(np.min(t)), float(np.max(t))\n",
+    "        bounds = (\n",
+    "            [0.0, -20.0, t_min, 0.0],\n",
+    "            [1.5,  20.0, t_max, 1.0]\n",
+    "        )\n",
+    "\n",
+    "        try:\n",
+    "            popt, _ = curve_fit(\n",
+    "                sigmoid, t, y,\n",
+    "                p0=[L0, k0, t0_0, b0],\n",
+    "                bounds=bounds,\n",
+    "                maxfev=maxfev\n",
+    "            )\n",
+    "\n",
+    "            y_pred = sigmoid(t, *popt)\n",
+    "            r2 = float(r2_score(y, y_pred))\n",
+    "\n",
+    "            L, k, t0_scaled, b = popt\n",
+    "\n",
+    "            # --- NEW: map t0 back to raw rolling_order ---\n",
+    "            t0_raw = t0_scaled * t_std + t_mean\n",
+    "\n",
+    "            # interpretable fitted share at tipping (evaluate using scaled t0)\n",
+    "            y_tipping = float(sigmoid(t0_scaled, *popt))\n",
+    "\n",
+    "            # sustain check: index near t0_raw (or equivalently near t0_scaled)\n",
+    "            # We'll locate using raw timeline for interpretability\n",
+    "            idx0 = int(np.argmin(np.abs(t_raw - t0_raw)))\n",
+    "            pre = y[:max(idx0, 1)]\n",
+    "            post = y[idx0: idx0 + sustain_window]\n",
+    "\n",
+    "            sustain_ok = (len(pre) >= 3) and (len(post) >= sustain_window) and (np.mean(post) > np.mean(pre) + 0.02)\n",
+    "\n",
+    "            results.append({\n",
+    "                id_col: acc,\n",
+    "                \"L\": float(L),\n",
+    "                \"k\": float(k),\n",
+    "                \"t0\": float(t0_raw),          # <-- raw tipping time\n",
+    "                \"b\": float(b),\n",
+    "                \"r2\": round(r2, 3),\n",
+    "                \"y_tipping\": round(y_tipping, 3),\n",
+    "                \"is_increasing\": bool((k > 0) and (r2 >= r2_cut)),\n",
+    "                \"sustain_ok\": bool(sustain_ok),\n",
+    "                \"is_valid_tip\": bool((k > 0) and (r2 >= r2_cut) and sustain_ok),\n",
+    "\n",
+    "                # optional debug fields (can remove anytime)\n",
+    "                \"t_mean\": t_mean,\n",
+    "                \"t_std\": t_std,\n",
+    "            })\n",
+    "\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "\n",
+    "    return pd.DataFrame(results)\n"
+   ]
   }
  ],
  "metadata": {
