--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -1960,6 +1960,94 @@
     "\n",
     "    return pd.DataFrame(results)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ee12770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.optimize import curve_fit\n",
+    "\n",
+    "def sigmoid(t, L, k, t0):\n",
+    "    return L / (1.0 + np.exp(-k * (t - t0)))\n",
+    "\n",
+    "def first_sigmoid_to_account_scale_t(\n",
+    "    df,\n",
+    "    id_col=\"account_id\",\n",
+    "    order_col=\"rolling_order\",\n",
+    "    y_col=\"b_r4w_ms\",\n",
+    "    min_points=10,\n",
+    "    near_zero_cut=0.01,\n",
+    "    r2_cut=0.85,\n",
+    "    maxfev=5000,\n",
+    "    clip_y=True,\n",
+    "    snap_t0=True\n",
+    "):\n",
+    "    results = []\n",
+    "\n",
+    "    d = df[[id_col, order_col, y_col]].copy()\n",
+    "    d = d.dropna(subset=[id_col, order_col, y_col])\n",
+    "    d[order_col] = pd.to_numeric(d[order_col], errors=\"coerce\")\n",
+    "    d[y_col] = pd.to_numeric(d[y_col], errors=\"coerce\")\n",
+    "    d = d.dropna(subset=[order_col, y_col])\n",
+    "\n",
+    "    if clip_y:\n",
+    "        d[y_col] = d[y_col].clip(0, 1)\n",
+    "\n",
+    "    for account_id, g in d.groupby(id_col, sort=False):\n",
+    "        g = g.sort_values(order_col)\n",
+    "\n",
+    "        y = g[y_col].to_numpy(dtype=float)\n",
+    "        if len(y) < min_points:\n",
+    "            continue\n",
+    "        if np.all(y < near_zero_cut):\n",
+    "            continue\n",
+    "        if np.nanstd(y) < 1e-6:\n",
+    "            continue\n",
+    "\n",
+    "        t_raw = g[order_col].to_numpy(dtype=float)\n",
+    "        t_mean = float(np.mean(t_raw))\n",
+    "        t_std = float(np.std(t_raw))\n",
+    "        if t_std == 0.0:\n",
+    "            continue\n",
+    "\n",
+    "        # scaled t\n",
+    "        t = (t_raw - t_mean) / t_std\n",
+    "\n",
+    "        try:\n",
+    "            popt, _ = curve_fit(sigmoid, t, y, p0=[1, 1, float(np.median(t))], maxfev=maxfev)\n",
+    "\n",
+    "            y_hat = sigmoid(t, *popt)\n",
+    "            ss_res = float(np.sum((y - y_hat) ** 2))\n",
+    "            ss_tot = float(np.sum((y - np.mean(y)) ** 2))\n",
+    "            r2 = 1.0 - ss_res / ss_tot if ss_tot > 0 else np.nan\n",
+    "\n",
+    "            L, k, t0_scaled = popt\n",
+    "            t0_raw = float(t0_scaled * t_std + t_mean)\n",
+    "\n",
+    "            # snap t0 to nearest observed rolling_order (optional but very useful)\n",
+    "            idx0 = int(np.argmin(np.abs(t_raw - t0_raw)))\n",
+    "            t0_snap = float(t_raw[idx0]) if snap_t0 else np.nan\n",
+    "\n",
+    "            results.append({\n",
+    "                id_col: account_id,\n",
+    "                \"L\": float(L),\n",
+    "                \"k\": float(k),\n",
+    "                \"t0_raw\": t0_raw,\n",
+    "                \"t0_snap\": t0_snap,\n",
+    "                \"r2\": round(float(r2), 3),\n",
+    "                \"is_increasing\": bool((k > 0) and (r2 >= r2_cut)),\n",
+    "            })\n",
+    "\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "\n",
+    "    return pd.DataFrame(results)\n"
+   ]
   }
  ],
  "metadata": {
