--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -2839,8 +2839,359 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9dba9af6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def _safe_div(a, b):\n",
+    "    return a / b if b != 0 else np.nan\n",
+    "\n",
+    "def _metrics_at_threshold(y_true, y_score, t):\n",
+    "    y_pred = (y_score >= t).astype(int)\n",
+    "    tp = np.sum((y_true == 1) & (y_pred == 1))\n",
+    "    fn = np.sum((y_true == 1) & (y_pred == 0))\n",
+    "    tn = np.sum((y_true == 0) & (y_pred == 0))\n",
+    "    fp = np.sum((y_true == 0) & (y_pred == 1))\n",
+    "\n",
+    "    precision = _safe_div(tp, tp + fp)\n",
+    "    recall = _safe_div(tp, tp + fn)            # sensitivity\n",
+    "    specificity = _safe_div(tn, tn + fp)\n",
+    "    f1 = _safe_div(2 * precision * recall, precision + recall)\n",
+    "    youden = recall + specificity - 1\n",
+    "    return f1, youden\n",
+    "\n",
+    "def _best_over_thresholds(y_true, y_score, n_thresholds=200):\n",
+    "    # 用分位数阈值扫一遍，减少重复阈值 & 更稳\n",
+    "    qs = np.linspace(0, 1, n_thresholds)\n",
+    "    thresholds = np.unique(np.quantile(y_score, qs))\n",
+    "\n",
+    "    f1s = np.empty_like(thresholds, dtype=float)\n",
+    "    js  = np.empty_like(thresholds, dtype=float)\n",
+    "\n",
+    "    for i, t in enumerate(thresholds):\n",
+    "        f1, j = _metrics_at_threshold(y_true, y_score, t)\n",
+    "        f1s[i] = f1\n",
+    "        js[i] = j\n",
+    "\n",
+    "    i_f1 = int(np.nanargmax(f1s))\n",
+    "    i_j  = int(np.nanargmax(js))\n",
+    "\n",
+    "    return {\n",
+    "        \"best_f1\": float(f1s[i_f1]),\n",
+    "        \"t_best_f1\": float(thresholds[i_f1]),\n",
+    "        \"best_youden\": float(js[i_j]),\n",
+    "        \"t_best_youden\": float(thresholds[i_j]),\n",
+    "    }\n",
+    "\n",
+    "def _lift_at_top_pct(y_true, y_score, top_pct=0.10):\n",
+    "    n = len(y_true)\n",
+    "    k = max(1, int(np.ceil(n * top_pct)))\n",
+    "    order = np.argsort(-y_score)\n",
+    "    top_idx = order[:k]\n",
+    "    base_rate = np.mean(y_true)\n",
+    "    top_rate = np.mean(y_true[top_idx])\n",
+    "    lift = _safe_div(top_rate, base_rate)\n",
+    "    return float(lift)\n",
+    "\n",
+    "def bootstrap_ci_best_metrics(\n",
+    "    y_true,\n",
+    "    y_score,\n",
+    "    n_boot=500,\n",
+    "    ci=0.95,\n",
+    "    n_thresholds=200,\n",
+    "    lift_top_pct=0.10,\n",
+    "    seed=42,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Bootstrap CIs on one dataset (recommended: OOT window).\n",
+    "    Returns point estimates + (lower, upper) CI for:\n",
+    "      - best F1 and its threshold\n",
+    "      - best Youden and its threshold\n",
+    "      - Lift@TopX%\n",
+    "    \"\"\"\n",
+    "    y_true = np.asarray(y_true).astype(int)\n",
+    "    y_score = np.asarray(y_score).astype(float)\n",
+    "    n = len(y_true)\n",
+    "\n",
+    "    rng = np.random.default_rng(seed)\n",
+    "\n",
+    "    # point estimates (on full sample)\n",
+    "    point = _best_over_thresholds(y_true, y_score, n_thresholds=n_thresholds)\n",
+    "    point[\"lift_top\"] = _lift_at_top_pct(y_true, y_score, top_pct=lift_top_pct)\n",
+    "\n",
+    "    # bootstrap distributions\n",
+    "    best_f1 = np.empty(n_boot, dtype=float)\n",
+    "    t_f1    = np.empty(n_boot, dtype=float)\n",
+    "    best_j  = np.empty(n_boot, dtype=float)\n",
+    "    t_j     = np.empty(n_boot, dtype=float)\n",
+    "    lift    = np.empty(n_boot, dtype=float)\n",
+    "\n",
+    "    for b in range(n_boot):\n",
+    "        idx = rng.integers(0, n, size=n)  # sample with replacement\n",
+    "        yt = y_true[idx]\n",
+    "        ys = y_score[idx]\n",
+    "\n",
+    "        d = _best_over_thresholds(yt, ys, n_thresholds=n_thresholds)\n",
+    "        best_f1[b] = d[\"best_f1\"]\n",
+    "        t_f1[b]    = d[\"t_best_f1\"]\n",
+    "        best_j[b]  = d[\"best_youden\"]\n",
+    "        t_j[b]     = d[\"t_best_youden\"]\n",
+    "        lift[b]    = _lift_at_top_pct(yt, ys, top_pct=lift_top_pct)\n",
+    "\n",
+    "    alpha = (1 - ci) / 2\n",
+    "    lo_q, hi_q = alpha, 1 - alpha\n",
+    "\n",
+    "    def q(x):\n",
+    "        return (float(np.quantile(x, lo_q)), float(np.quantile(x, hi_q)))\n",
+    "\n",
+    "    out = {\n",
+    "        \"point\": point,\n",
+    "        \"ci\": {\n",
+    "            \"best_f1\": q(best_f1),\n",
+    "            \"t_best_f1\": q(t_f1),\n",
+    "            \"best_youden\": q(best_j),\n",
+    "            \"t_best_youden\": q(t_j),\n",
+    "            f\"lift_top_{int(lift_top_pct*100)}pct\": q(lift),\n",
+    "        },\n",
+    "        # 如果你想做更深入诊断，可保留分布（可选）\n",
+    "        \"dist\": {\n",
+    "            \"best_f1\": best_f1,\n",
+    "            \"t_best_f1\": t_f1,\n",
+    "            \"best_youden\": best_j,\n",
+    "            \"t_best_youden\": t_j,\n",
+    "            \"lift\": lift,\n",
+    "        }\n",
+    "    }\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7ba5ef11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point estimates:\n",
+      "{'best_f1': 0.6103968697596422, 't_best_f1': 0.3014735894057116, 'best_youden': 0.6715558046836074, 't_best_youden': 0.11218540522608222, 'lift_top': 5.775462962962964}\n",
+      "\n",
+      "95% CIs:\n",
+      "           best_f1: (0.5845, 0.6357)\n",
+      "         t_best_f1: (0.2478, 0.3439)\n",
+      "       best_youden: (0.6490, 0.7010)\n",
+      "     t_best_youden: (0.1007, 0.1661)\n",
+      "    lift_top_10pct: (5.4751, 6.0576)\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = bootstrap_ci_best_metrics(\n",
+    "    y_true,\n",
+    "    y_score,\n",
+    "    n_boot=500,\n",
+    "    ci=0.95,\n",
+    "    n_thresholds=200,\n",
+    "    lift_top_pct=0.10,  # 你也可以改 0.15 / 0.20\n",
+    "    seed=42,\n",
+    ")\n",
+    "\n",
+    "print(\"Point estimates:\")\n",
+    "print(res[\"point\"])\n",
+    "\n",
+    "print(\"\\n95% CIs:\")\n",
+    "for k, v in res[\"ci\"].items():\n",
+    "    print(f\"{k:>18}: ({v[0]:.4f}, {v[1]:.4f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ddda406d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def recommend_threshold_ranges_from_ci(res, use_percentiles=(0.05, 0.5, 0.95)):\n",
+    "    \"\"\"\n",
+    "    res: bootstrap_ci_best_metrics() 的返回结果（包含 dist + ci + point）\n",
+    "    use_percentiles: 用于取分位数的点（默认 5%, 50%, 95%）\n",
+    "    \"\"\"\n",
+    "    # 取阈值分布\n",
+    "    t_f1_dist = res[\"dist\"][\"t_best_f1\"]\n",
+    "    t_j_dist  = res[\"dist\"][\"t_best_youden\"]\n",
+    "\n",
+    "    p_lo, p_med, p_hi = use_percentiles\n",
+    "    tF1_lo, tF1_med, tF1_hi = np.quantile(t_f1_dist, [p_lo, p_med, p_hi])\n",
+    "    tJ_lo,  tJ_med,  tJ_hi  = np.quantile(t_j_dist,  [p_lo, p_med, p_hi])\n",
+    "\n",
+    "    # 推荐区间\n",
+    "    high_range = (float(tJ_med), float(tJ_hi))\n",
+    "    watch_range = (float(tF1_lo), float(tJ_med))\n",
+    "\n",
+    "    return {\n",
+    "        \"watchlist_range\": watch_range,\n",
+    "        \"high_risk_range\": high_range,\n",
+    "        \"anchors\": {\n",
+    "            \"tF1_lo_med_hi\": (float(tF1_lo), float(tF1_med), float(tF1_hi)),\n",
+    "            \"tJ_lo_med_hi\":  (float(tJ_lo),  float(tJ_med),  float(tJ_hi)),\n",
+    "            \"lift_ci\": res[\"ci\"][next(k for k in res[\"ci\"].keys() if k.startswith(\"lift_top_\"))],\n",
+    "            \"point\": res[\"point\"],\n",
+    "        }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "567bda68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'watchlist_range': (0.25181541634651133, 0.11369330301461597), 'high_risk_range': (0.11369330301461597, 0.16220156403423575), 'anchors': {'tF1_lo_med_hi': (0.25181541634651133, 0.30048817243372394, 0.34009568273660773), 'tJ_lo_med_hi': (0.10257741817101693, 0.11369330301461597, 0.16220156403423575), 'lift_ci': (5.475091398075387, 6.057589923997291), 'point': {'best_f1': 0.6103968697596422, 't_best_f1': 0.3014735894057116, 'best_youden': 0.6715558046836074, 't_best_youden': 0.11218540522608222, 'lift_top': 5.775462962962964}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rec = recommend_threshold_ranges_from_ci(res)\n",
+    "print(rec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4406f239",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def rec_to_table(rec):\n",
+    "    \"\"\"\n",
+    "    Convert recommend_threshold_ranges_from_ci(rec) output\n",
+    "    into a clean, decision-ready pandas DataFrame.\n",
+    "    \"\"\"\n",
+    "    rows = [\n",
+    "        {\n",
+    "            \"segment\": \"High risk\",\n",
+    "            \"threshold_range\": f\"[{rec['high_risk_range'][0]:.3f}, {rec['high_risk_range'][1]:.3f}]\",\n",
+    "            \"anchor\": \"Youden-optimal (upper band)\",\n",
+    "            \"interpretation\": \"High-confidence BCL risk; strong intervention\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"segment\": \"Watchlist\",\n",
+    "            \"threshold_range\": f\"[{rec['watchlist_range'][0]:.3f}, {rec['watchlist_range'][1]:.3f})\",\n",
+    "            \"anchor\": \"F1-optimal lower CI → Youden median\",\n",
+    "            \"interpretation\": \"Potential risk; monitor / light intervention\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"segment\": \"Low risk\",\n",
+    "            \"threshold_range\": f\"< {rec['watchlist_range'][0]:.3f}\",\n",
+    "            \"anchor\": \"Below F1-optimal CI lower bound\",\n",
+    "            \"interpretation\": \"Not prioritized under current capacity\"\n",
+    "        }\n",
+    "    ]\n",
+    "\n",
+    "    return pd.DataFrame(rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cde4eb59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>segment</th>\n",
+       "      <th>threshold_range</th>\n",
+       "      <th>anchor</th>\n",
+       "      <th>interpretation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>High risk</td>\n",
+       "      <td>[0.114, 0.162]</td>\n",
+       "      <td>Youden-optimal (upper band)</td>\n",
+       "      <td>High-confidence BCL risk; strong intervention</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Watchlist</td>\n",
+       "      <td>[0.252, 0.114)</td>\n",
+       "      <td>F1-optimal lower CI → Youden median</td>\n",
+       "      <td>Potential risk; monitor / light intervention</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Low risk</td>\n",
+       "      <td>&lt; 0.252</td>\n",
+       "      <td>Below F1-optimal CI lower bound</td>\n",
+       "      <td>Not prioritized under current capacity</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     segment threshold_range                               anchor  \\\n",
+       "0  High risk  [0.114, 0.162]          Youden-optimal (upper band)   \n",
+       "1  Watchlist  [0.252, 0.114)  F1-optimal lower CI → Youden median   \n",
+       "2   Low risk         < 0.252      Below F1-optimal CI lower bound   \n",
+       "\n",
+       "                                  interpretation  \n",
+       "0  High-confidence BCL risk; strong intervention  \n",
+       "1   Potential risk; monitor / light intervention  \n",
+       "2         Not prioritized under current capacity  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rec = recommend_threshold_ranges_from_ci(res)\n",
+    "\n",
+    "\n",
+    "df_rec = rec_to_table(rec)\n",
+    "df_rec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c4da373",
    "metadata": {},
    "outputs": [],
    "source": []
